<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--The Total Amount-->
    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="37dp"
        android:text="@string/total_amount"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />
    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/total_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTextView"
        app:layout_constraintStart_toStartOf="parent" />
    <!--Bill Amount-->
    <TextView
        android:id="@+id/billAmountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="10dp"
        android:text="@string/bill_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="8"
        android:hint="Enter Amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/billAmountLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <!--The Tip Percent-->
    <TextView
        android:id="@+id/percentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="21dp"
        android:text="@string/tip_percent_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/percentTextView"
        app:layout_constraintEnd_toStartOf="@+id/percentTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/percentDownButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="84dp"
        android:width="48dp"
        android:height="48dp"
        android:text="@string/decrease"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />

    <Button
        android:id="@+id/percentUpButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="164dp"
        android:width="48dp"
        android:height="48dp"
        android:elegantTextHeight="false"
        android:text="@string/increase"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/percentDownButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/percentTextView"
        app:layout_constraintTop_toTopOf="@+id/percentDownButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="53dp"
        android:text="@string/tip_percent"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/percentUpButton"
        app:layout_constraintStart_toEndOf="@+id/percentLabel"
        app:layout_constraintTop_toBottomOf="@+id/billAmountEditText" />
    <!--The Tip Amount-->

    <TextView
        android:id="@+id/tipLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tip_amount_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:text="@string/tip_amount"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tipLabel"
        app:layout_constraintTop_toBottomOf="@+id/percentUpButton" />


</androidx.constraintlayout.widget.ConstraintLayout>